test/ui/tests/parsing/unbalanced-brackets.stderr
error[E001]: unbalanced square bracket
 --> ${DIRECTORY}/parsing/unbalanced-brackets.lushui:4:6
  |
4 | x: X ] X [
  |      ^ has no matching opening square bracket
  |

error[E010]: found `]` but expected terminator
 --> ${DIRECTORY}/parsing/unbalanced-brackets.lushui:4:6
  |
4 | x: X ] X [
  |      ^ unexpected token
  |

error[E001]: unbalanced square bracket
 --> ${DIRECTORY}/parsing/unbalanced-brackets.lushui:4:10
  |
4 | x: X ] X [
  |          ^ has no matching closing square bracket
  |

error: aborting due to 3 previous errors
 note: the errors E001 and E010 have a detailed explanation
 help: run `lushui explain <codes...>` to view a selection of them

